--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -76,7 +76,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Play user actions</string>
+         <string>Play actions</string>
         </property>
        </widget>
       </item>
@@ -95,7 +95,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Display user actions</string>
+         <string>Open and show actions</string>
         </property>
        </widget>
       </item>
